# MedusaCompiler

./: CMakeLists.txt
include/: lexer.h
src/: lexer.cpp  main.cpp
src/service/AST/: AST.cpp
src/service/lexer/: lexer.cpp  lexer.h
